# engineering-capacity-planner

./: .gitignore  README.md
.github/workflows/: ci.yml  deploy.yml
docs/: HANDOFF.md
docs/superpowers/plans/: 2026-05-29-capacity-engine.md  2026-05-30-capacity-api.md  2026-05-31-capacity-web-app.md  2026-05-31-hosted-web-app.md  2026-06-03-engineering-capacity-planner.md  2026-06-04-login-phase-2.md  (+1 more)
engine/: pyproject.toml
engine/capacity_engine/: __init__.py  capacity.py  demand.py  fit.py  models.py  multipliers.py  planning.py  risks.py  scenarios.py  store.py  validation.py
engine/tests/: conftest.py  test_api.py  test_capacity.py  test_demand.py  test_fit.py  test_golden.py  test_multipliers.py  test_planning.py  test_risks.py  test_scenarios.py  test_store.py  test_validation.py
engine/tests/fixtures/: golden_teams.json
server/: pyproject.toml
server/capacity_server/: __init__.py  app.py  app_seeded.py  routes.py  schemas.py  serialize.py  state.py
server/data/: sample_org.json
server/tests/: conftest.py  test_app_seeded.py  test_org.py  test_rollup.py  test_roster.py  test_scenario.py  test_team_plan.py
supabase/: schema.sql
web/: .env.example  .gitignore  .npmrc  HOSTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: presenter.py
web/reference/: Capacity Dashboard.html  How It Fits Together.html
web/scripts/: lint-tokens.mjs  prepare-engine-assets.sh
web/src/: App.test.tsx  App.tsx  index.css  vite-env.d.ts
web/tests-py/: test_presenter.py
(+92 files in other folders)
