[project]
name = "capacity_server"
version = "0.1.0"
description = "FastAPI server over the capacity engine"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29", "capacity_engine"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["capacity_server*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
